# cribbage

./: Cargo.toml  README.md  bacon.toml
src/: card.rs  deck.rs  hand.rs  lib.rs  main.rs  score.rs  strategy.rs
