[package]
name = "cribbage"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "simple-fives"
path = "src/bin/simple-fives.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8.2"
rand = "0.7.3"
strum = "0.24"
strum_macros = "0.24"
lazy_static = "1.4.0"
